# whois

./: .gitignore  112.78.2.210.txt  README.md  main.py  pyproject.toml  whoisxml.py
whoisxml/: cli.py  whoisxml.py
